--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     }
 
     include "me.sargunvohra.mcmods:autoconfig1u:3.2.2"
+    include "me.shedaniel.cloth:config-2:4.8.2"
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
 }
